# ENGR357-SDR-PennockRoque

./: README.md  SDR-v1-SwitchMixer.kicad_prl  SDR-v1-SwitchMixer.kicad_pro  SDR-v1-SwitchMixer.kicad_sch
Code/Unit Tests/: si5351_test.py
Documents/: HardwareDocumentation.ipynb  Milestone6-BoardBringUpPlan.docx  Milestone7-FinalHardwareDocumentation.ipynb  documentation.ipynb
KiCad Designs/: ENGR356-v2.kicad_sch  SDR-v3-TayloeDetector-FINAL.kicad_sch  ~SDR-v3-TayloeDetector-FINAL.kicad_pro.lck
KiCad Designs/Archive/: SDR-v3-TayloeDetector-FINAL-In2_Cu.gbr
KiCad Designs/ArchivedDesignsV1-3/Version 2 Tayloe Detector/: SDR-v2-TayloeDetector.kicad_sch
KiCad Designs/ArchivedDesignsV1-3/Version 3 Tayloe Detector/: SDR-v3-TayloeDetector-FINAL.kicad_pro
KiCad Designs/ArchivedDesignsV1-3/Version 3 Tayloe Detector/Archive/: SDR-v3-TayloeDetector-FINAL-B_Mask.gbr  SDR-v3-TayloeDetector-FINAL-F_Mask.gbr  SDR-v3-TayloeDetector-FINAL-job.gbrjob
KiCad Designs/Version 1 Switch Mixer/: SDR-v1-SwitchMixer.kicad_pcb
KiCad Designs/Version 2 Tayloe Detector/: SDR-v2-TayloeDetector.kicad_prl  SDR-v2-TayloeDetector.kicad_pro
KiCad Designs/Version 3 Tayloe Detector/: SDR-v3-TayloeDetector-FINAL.kicad_prl
KiCad Designs/Version 3 Tayloe Detector/Archive/: SDR-v3-TayloeDetector-FINAL-B_Silkscreen.gbr  SDR-v3-TayloeDetector-FINAL-F_Cu.gbr
KiCad Designs/Version 3 Tayloe Detector/Pennock,Roque-ENGR356-SDR-ProductionFiles/: designators.csv  positions.csv
KiCad-Designs-(ROOT IS CURRENT)/: SDR-v3-TayloeDetector-FINAL.kicad_pcb
KiCad-Designs-(ROOT IS CURRENT)/Archive/: SDR-v3-TayloeDetector-FINAL-F_Paste.gbr  SDR-v3-TayloeDetector-FINAL-F_Silkscreen.gbr  SDR-v3-TayloeDetector-FINAL-In1_Cu.gbr
KiCad-Designs-(ROOT IS CURRENT)/ArchivedDesignsV1-3/Version 1 Switch Mixer/: README.md
KiCad-Designs-(ROOT IS CURRENT)/ArchivedDesignsV1-3/Version 3 Tayloe Detector/: ENGR356-v2.kicad_prl  ENGR356-v2.kicad_pro
KiCad-Designs-(ROOT IS CURRENT)/Pennock,Roque-ENGR356-SDR-ProductionFiles/: netlist.ipc
LT Spice Simulations/: SDR-ERRORMixerAmpSim.asc  SDR-SingalBoostAmpSim.asc
LT-Spice-Simulations/: SDR-SwitchMixerSim.asc  SDR-TayloeDetector-AmpStage.asc
Milestones-Documentation/: CPTR480-Presentation.ipynb  Milestone2-DesignGoals.docx  Milestone7-FinalHardwareDocumentation.ipynb
Milestones-Documentation/Milestone4-CircuitNoiseSimulations/: info-LTSpice
pico-sdr-receiver/: .gitignore  CMakeLists.txt  main.c  si5351.c  si5351.h  tusb_config.h  usb_descriptors.c
pico-sdr-receiver/src/: main.c
sdr-firmware/: CMakeLists.txt  cdc_app.c  i2s_rx.pio  lcd_driver.c  lcd_driver.h  main.c  si5351.c  si5351.h  si5351_test.c  tusb_config.h  usb_descriptors.c
sdr-firmware/PythonUnitTests/: encoder_am_tune_test.py  encoder_si5351_tune_test.py  i2c_scan_test.py  lcd_encoder_test.py  lcd_test.py  si5351_test.py
(+4 files in other folders)
